@@ -131,7 +131,7 @@ helm install c7n/mysql-client \
 
     ```bash
     helm install c7n/wiki-service \
-        --set env.open.JAVA_OPTS="-Xms1024M -Xmx1024M" \
+        --set env.open.JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap" \
         --set preJob.preConfig.mysql.host=c7n-mysql.c7n-system.svc \
         --set preJob.preConfig.mysql.port=3306 \
         --set preJob.preConfig.mysql.database=manager_service \
